added sales channel column

--- a/backend/main-template.html
+++ b/backend/main-template.html
@@ -61,7 +61,7 @@
       <thead>
         <tr>
           <th>Order #</th>
-          <th>Time</th>
+          <th>Sales channel</th>
           <th>Description</th>
           <th>Amount (₽)</th>
           <th>Delivery Address</th>
