added goods names and amounts

--- a/backend/main-template.html
+++ b/backend/main-template.html
@@ -29,6 +29,10 @@
         padding: 12px; 
         text-align: left; 
       }
+      td br {
+        display: block;
+        margin: 7px 0;
+      }
       th { 
         background-color: #f8f9fa; 
         font-weight: bold;
@@ -60,11 +64,11 @@
     <table>
       <thead>
         <tr>
-          <th>Order #</th>
-          <th>Sales channel</th>
-          <th>Description</th>
-          <th>Amount (₽)</th>
-          <th>Delivery Address</th>
+          <th>Номер заказа</th>
+          <th>Канал продаж</th>
+          <th>Товар</th>
+          <th>Сумма (₽)</th>
+          <th>Адрес доставки</th>
         </tr>
       </thead>
       <tbody>
