add counterparty phone number column

--- a/backend/main-template.html
+++ b/backend/main-template.html
@@ -67,8 +67,8 @@
           <th>Номер заказа</th>
           <th>Канал продаж</th>
           <th>Товар</th>
-          <th>Сумма (₽)</th>
           <th>Адрес доставки</th>
+          <th>Контрагент</th>
         </tr>
       </thead>
       <tbody>
