add comment and leftToPay

--- a/backend/main-template.html
+++ b/backend/main-template.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Latest Orders - {{DATE}}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=0.7">
     <style>
       body { 
         font-family: Arial, sans-serif; 
@@ -69,6 +71,8 @@
           <th>Товар</th>
           <th>Адрес доставки</th>
           <th>Контрагент</th>
+          <th>Комментарий</th>
+          <th>Остаток к оплате</th>
         </tr>
       </thead>
       <tbody>
